--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
-</iframe><iframe frameborder="0" src="https://itch.io/embed/2815991" width="552" height="167"><a
-        href="https://garori.itch.io/why-did-the-chicken-cross-the-road">Why did the chicken cross the road by
-        Garori</a></iframe>
+<!DOCTYPE html>
+<html lang="pt">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Website</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+    <main>
+        <center>
+            <h1>Portfólio do Slaziel</h1>
+            <h2>João Vitor Rodrigues de Almeida</h2>
+        </center>
+    </main>
+    <section>
+        
+    </section>
+    <!--<script src="index.js"></script>*/-->
+</body>
+
+</html>
