--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         </center>
     </main>
     <section>
-        
+        <h2>o que eu faço?</h2>
+        <p>Jogos, eu faço jogos.</p>
+        <br>
+        <p>Trabalho no ODU:</p>
+        <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do odu studios</a>
     </section>
     <!--<script src="index.js"></script>*/-->
 </body>
