--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Portfólio de João Vitor Rodrigues</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
@@ -17,12 +17,24 @@
             <h2>João Vitor Rodrigues de Almeida</h2>
         </center>
     </main>
+    <section class="principal">
+        <div>
+            <h3>O que eu faço?</h3>
+            <p>Jogos, eu faço jogos.</p>
+            <br>
+            <h3>Onde eu trabalho?:</h3>
+            <p>Trabalho, atualmente no ODU Studios como Desenvolvedor de jogos.</p>
+            <a href="https://odustudios.com.br/">Link para o site do ODU Studios</a>
+            <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do ODU studios</a>
+        </div>
+    </section>
     <section>
-        <h2>o que eu faço?</h2>
-        <p>Jogos, eu faço jogos.</p>
-        <br>
-        <p>Trabalho no ODU:</p>
-        <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do odu studios</a>
+        <h3>Jogos que participei da criação:</h3>
+        <p>Muitos deles estão na minha <a href="https://slaziel.itch.io">página do itch.io</a></p>
+        <iframe frameborder="0" src="https://itch.io/embed/2498519" width="552" height="167"><a
+                href="https://brunotzki.itch.io/para-rir-tem-que-fazer-rir">Para rir, tem que fazer rir
+                Slaziel</a></iframe>
+
     </section>
     <!--<script src="index.js"></script>*/-->
 </body>
