--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do ODU studios</a>
         </div>
     </section>
-    <section>
+    <section class="floatleft">
         <h3>Jogos que participei da criação:</h3>
         <p>Muitos deles estão na minha <a href="https://slaziel.itch.io">página do itch.io</a></p>
         <iframe frameborder="0" src="https://itch.io/embed/2498519" width="552" height="167"><a
