--- a/index.html
+++ b/index.html
@@ -18,23 +18,24 @@
         </center>
     </main>
     <section class="principal">
-        <div>
-            <h3>O que eu faço?</h3>
-            <p>Jogos, eu faço jogos.</p>
-            <br>
-            <h3>Onde eu trabalho?:</h3>
-            <p>Trabalho, atualmente no ODU Studios como Desenvolvedor de jogos.</p>
-            <a href="https://odustudios.com.br/">Link para o site do ODU Studios</a>
-            <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do ODU studios</a>
-        </div>
-    </section>
-    <section class="floatleft">
-        <h3>Jogos que participei da criação:</h3>
-        <p>Muitos deles estão na minha <a href="https://slaziel.itch.io">página do itch.io</a></p>
-        <iframe frameborder="0" src="https://itch.io/embed/2498519" width="552" height="167"><a
-                href="https://brunotzki.itch.io/para-rir-tem-que-fazer-rir">Para rir, tem que fazer rir
-                Slaziel</a></iframe>
-
+        <section class="floatright">
+            <div>
+                <h3>O que eu faço?</h3>
+                <p>Jogos, eu faço jogos.</p>
+                <br>
+                <h3>Onde eu trabalho?:</h3>
+                <p>Trabalho, atualmente no ODU Studios como Desenvolvedor de jogos.</p>
+                <a href="https://odustudios.com.br/">Link para o site do ODU Studios</a>
+                <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do ODU studios</a>
+            </div>
+        </section>
+        <section class="floatleft">
+            <h3>Jogos que participei da criação:</h3>
+            <p>Muitos deles estão na minha <a href="https://slaziel.itch.io">página do itch.io</a></p>
+            <iframe frameborder="0" src="https://itch.io/embed/2498519" width="552" height="167"><a
+                    href="https://brunotzki.itch.io/para-rir-tem-que-fazer-rir">Para rir, tem que fazer rir
+                    Slaziel</a></iframe>
+        </section>
     </section>
     <!--<script src="index.js"></script>*/-->
 </body>
