--- a/index.html
+++ b/index.html
@@ -26,15 +26,25 @@
                 <h3>Onde eu trabalho?:</h3>
                 <p>Trabalho, atualmente no ODU Studios como Desenvolvedor de jogos.</p>
                 <a href="https://odustudios.com.br/">Link para o site do ODU Studios</a>
+                <br>
                 <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do ODU studios</a>
             </div>
         </section>
         <section class="floatleft">
             <h3>Jogos que participei da criação:</h3>
             <p>Muitos deles estão na minha <a href="https://slaziel.itch.io">página do itch.io</a></p>
-            <iframe frameborder="0" src="https://itch.io/embed/2498519" width="552" height="167"><a
-                    href="https://brunotzki.itch.io/para-rir-tem-que-fazer-rir">Para rir, tem que fazer rir
-                    Slaziel</a></iframe>
+            <p>ODU pelo ODU Studios (em desenvolvimento)</p>
+            <div class="itchdiv">
+                <iframe frameborder="0" src="https://itch.io/embed/2498519" width="552" height="167"><a
+                        href="https://brunotzki.itch.io/para-rir-tem-que-fazer-rir">Para rir, tem que fazer rir by
+                        Slaziel</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/2325899" width="552" height="167"><a
+                        href="https://juliateixeira.itch.io/yellow-lily">yellow Lilly by
+                        Slaziel</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/1112132" width="552" height="167"><a
+                        href="https://slaziel.itch.io/cadente">Cadebte by
+                        Slaziel</a></iframe>
+            </div>
         </section>
     </section>
     <!--<script src="index.js"></script>*/-->
