--- a/index.html
+++ b/index.html
@@ -12,17 +12,29 @@
 
 <body>
     <main>
-        <center>
+        <div style="height: 10vw; width: 8vw;"></div>
+        <center class="card">
             <h1>Portfólio do Slaziel</h1>
             <h2>João Vitor Rodrigues de Almeida</h2>
         </center>
+        <center style="float: right;">
+            <div class="foto_slaziel"></div>
+        </center>
+
     </main>
     <section class="principal">
-        <section class="floatright">
+        <section class="principalChild">
+            <div>
+                <h3>Quem sou eu?</h3>
+                <p>Slaziel</p>
+            </div>
+            <br>
             <div>
                 <h3>O que eu faço?</h3>
                 <p>Jogos, eu faço jogos.</p>
-                <br>
+            </div>
+            <br>
+            <div>
                 <h3>Onde eu trabalho?:</h3>
                 <p>Trabalho, atualmente no ODU Studios como Desenvolvedor de jogos.</p>
                 <a href="https://odustudios.com.br/">Link para o site do ODU Studios</a>
@@ -30,9 +42,10 @@
                 <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do ODU studios</a>
             </div>
         </section>
-        <section class="floatleft">
+        <section class="principalChild card">
             <h3>Jogos que participei da criação:</h3>
-            <p>Muitos deles estão na minha <a href="https://slaziel.itch.io">página do itch.io</a></p>
+            <p>Muitos deles estão na minha <a style="padding: 0;" href="https://slaziel.itch.io">página do itch.io</a>
+            </p>
             <p>ODU pelo ODU Studios (em desenvolvimento)</p>
             <div class="itchdiv">
                 <iframe frameborder="0" src="https://itch.io/embed/2498519" width="552" height="167"><a
