--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Portfólio do Slaziel</h1>
             <h2>João Vitor Rodrigues de Almeida</h2>
         </center>
-        <center style="float: right;">
+        <center class="card" style="float: right;">
             <div class="foto_slaziel"></div>
         </center>
 
