--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <center class="card" style="float: right;">
             <div class="foto_slaziel"></div>
         </center>
-
+        
     </main>
     <section class="principal">
         <section class="principalChild">
@@ -37,15 +37,14 @@
             <div>
                 <h3>Onde eu trabalho?:</h3>
                 <p>Trabalho, atualmente no ODU Studios como Desenvolvedor de jogos.</p>
-                <a href="https://odustudios.com.br/">Link para o site do ODU Studios</a>
+                <a href="https://odustudios.com.br/" target="_blank">Link para o site do ODU Studios</a>
                 <br>
-                <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/">Link para o linkedin do ODU studios</a>
+                <a href="https://www.linkedin.com/in/odu-studios-8ab6542aa/" target="_blank">Link para o linkedin do ODU studios</a>
             </div>
         </section>
         <section class="principalChild card">
             <h3>Jogos que participei da criação:</h3>
-            <p>Muitos deles estão na minha <a style="padding: 0;" href="https://slaziel.itch.io">página do itch.io</a>
-            </p>
+            <p>Muitos deles estão na minha <a style="padding: 0;" href="https://slaziel.itch.io" target="_blank">página do itch.io</a></p>
             <p>ODU pelo ODU Studios (em desenvolvimento)</p>
             <div class="itchdiv">
                 <iframe frameborder="0" src="https://itch.io/embed/2498519" width="552" height="167"><a
